Change "easy to use" claim

--- a/fsesrc-submission.tex
+++ b/fsesrc-submission.tex
@@ -319,8 +319,9 @@ integers in Java programs.
 This type system enables developers to detect errors regarding unsigned
 integers at compile time and guarantees that such errors cannot occur at
 run time.
-In a case study, our type system proved easy to use and detected a
-previously unknown bug.
+In a case study, our type system required little developer effort (just 33
+annotations written) and detected a
+previously-unknown bug.
 
 \begin{figure}[t]
 \begin{lstlisting}
